primer commit de estilos

--- a/index.html
+++ b/index.html
@@ -1,40 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/style/styles.css">
     <title>Home</title>
 </head>
+
 <body>
     <header>
-        <img src="./assets/Logo-Mighty-ducks-01.png" alt="logo" height="100">
         <h1>Mighty Ducks Hockey League</h1>
-        <nav>
-            <a href="#">Home</a>
-            <a href="./about.html">About MDHL</a>
-            <a href="./contact.html">contact</a>
-        </nav>
-    </header>  
-    <img src="./assets/hockey-1.jpg" alt="Image 1" height="200">
-    
+        <div class="header">
+            <nav>
+                <a id="current" href="#">Home</a>
+                <a href="./about.html">About MDHL</a>
+                <a href="./contact.html">Contact</a>
+            </nav>
+            <img src="./assets/img/design1_image1.jpg" alt="Image 1">
+        </div>
+
+
+    </header>
+
     <main>
         <section>
             <h2>Upcoming Events</h2>
-            <article>
-                <h3>August 4</h3>
-                <p>MDSL Fundraiser</p>
-            </article>
-            <article>
-                <h3>August 15</h3>
-                <p>Season Kick-off: Meet the Teams</p>
-            </article>
-            <article>
-                <h3>September 1</h3>
-                <p>First Game of the Season (Check Game Schedule for details)</p>
-            </article>
+            <img src="./assets/img/Logo-Mighty-ducks-01.png" alt="logo">
+            <div class="articles">
+
+                <article>
+                    <h3>August 4</h3>
+                    <p>MDSL Fundraiser</p>
+                </article>
+                <article>
+                    <h3>August 15</h3>
+                    <p>Season Kick-off: Meet the Teams</p>
+                </article>
+                <article>
+                    <h3>September 1</h3>
+                    <p>First Game of the Season (Check Game Schedule for details)</p>
+                </article>
+            </div>
         </section>
     </main>
-    
+
 </body>
+
 </html>
