imagen del header corregida; se añadio las imagenes correspondientes de fondo de task 1; se eliminaron los margenes del sitio web

--- a/about.html
+++ b/about.html
@@ -18,14 +18,15 @@
                 <a href="#" id="current">About MDHL</a>
                 <a href="./contact.html">Contact</a>
             </nav>
-            <img src="./assets/img/design1_image1.jpg" alt="Image 1">
+            <img src="./assets/img/design1_image2.jpg" alt="Image 2 Task 2">
         </div>
     </header>
     
-    <main>
+    <main style="background-image: url('./assets/img/hockey-2.jpg'); background-repeat: no-repeat; background-size: cover;">
         <section>
             <h2>About</h2>
             <img src="./assets/img/Logo-Mighty-ducks-01.png" alt="logo">
+            
             <div class="articles">
                 <article>
                     <h3>Mision</h3>
