--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style/styles.css">
-    <title>contact</title>
+    <title>Contact</title>
 </head>
 
-<body>
+<body >
     <header>
         <h1>Mighty Ducks Hockey League</h1>
         <div class="header">
@@ -18,12 +18,13 @@
                 <a href="./about.html">About MDHL</a>
                 <a href="#" id="current">Contact</a>
             </nav>
-            <img src="./assets/img/design1_image1.jpg" alt="Image 3">
+            <img src="./assets/img/design1_image2.jpg" alt="Image 2 Task 2">
+            
         </div>
     </header>
 
-    <main>
-        <section>
+    <main style="background-image: url('./assets/img/hockey-3.jpg'); background-repeat: no-repeat; background-size: cover;">
+        <section >
             <h2>Contact</h2>
             <img src="./assets/img/Logo-Mighty-ducks-01.png" alt="logo" height="100">
             <div class="articles">
