--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
                 <a href="./about.html">About MDHL</a>
                 <a href="./contact.html">Contact</a>
             </nav>
-            <img src="./assets/img/design1_image1.jpg" alt="Image 1">
+            <img src="./assets/img/design1_image2.jpg" alt="Image 2 Task 2">
         </div>
 
 
     </header>
 
-    <main>
+    <main style="background-image: url('./assets/img/hockey-1.jpg'); background-repeat: no-repeat; background-size: cover;"> 
         <section>
             <h2>Upcoming Events</h2>
-            <img src="./assets/img/Logo-Mighty-ducks-01.png" alt="logo">
+            <img src="/assets/img/Logo-Mighty-ducks-01.png" alt="logo">
+            
             <div class="articles">
 
                 <article>
