--- a/contact.html
+++ b/contact.html
@@ -14,22 +14,27 @@
         <h1>Mighty Ducks Hockey League</h1>
         <div class="header">
             <nav>
-                <a href="./index.html">Home</a>
-                <a href="./about.html">About MDHL</a>
-                <a href="#" id="current">Contact</a>
+                <ul>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./about.html">About MDHL</a></li>
+                    <li><a href="#" id="current">Contact</a></li>
+                </ul>      
             </nav>
-            <img src="./assets/img/design1_image2.jpg" alt="Image 2 Task 2">
-            
+            <img class="nav-img" src="./assets/img/design1_image2.jpg" alt="Image 2 Task 2">      
         </div>
     </header>
 
     <main style="background-image: url('./assets/img/hockey-3.jpg'); background-repeat: no-repeat; background-size: cover;">
         <section >
-            <h2>Contact</h2>
-            <img src="./assets/img/Logo-Mighty-ducks-01.png" alt="logo" height="100">
-            <div class="articles">
-                <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
-                <p>We reply to your email as soon as we can.</p>
+            <div class="section-title">
+                <h2>Contact</h2>
+            </div>
+            <div class="section-body">
+                <img class="section-logo" src="./assets/img/Logo-Mighty-ducks-01.png" alt="logo">
+                <div class="articles">
+                    <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
+                    <p>We reply to your email as soon as we can.</p>
+                </div>
             </div>
         </section>
     </main>
