--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style/styles.css">
+    <link rel="shortcut icon" href="./assets/img/Logo-Mighty-ducks-01.png" type="image/x-icon">
     <title>Contact</title>
 </head>
 
@@ -18,6 +19,8 @@
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./about.html">About MDHL</a></li>
                     <li><a href="#" id="current">Contact</a></li>
+                    <li><a href="./rules.html">Rules</a></li>
+                    <li><a href="./game_info.html">Game Information</a></li>
                 </ul>      
             </nav>
             <img class="nav-img" src="./assets/img/design1_image2.jpg" alt="Image 2 Task 2">      
