--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style/styles.css">
     <title>Home</title>
+    <link rel="shortcut icon" href="./assets/img/Logo-Mighty-ducks-01.png" type="image/x-icon"> 
 </head>
+
 
 <body>
     <header>
@@ -26,6 +28,8 @@
                     <li>
                         <a href="./contact.html">Contact</a>
                     </li>
+                    <li><a href="./rules.html">Rules</a></li>
+                    <li><a href="./game_info.html">Game Information</a></li>
                 </ul>
             </nav>
 
