--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     </li>
                     <li><a href="./rules.html">Rules</a></li>
                     <li><a href="./game_info.html">Game Information</a></li>
+                    <li><a href="./registration.html">Registration Form</a></li>
                 </ul>
             </nav>
 
