estilos añadidos al formulario de inscripcion y mapas añadidos a la pestaña de informacion del juego

--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
                     <li><a href="#" id="current">Contact</a></li>
                     <li><a href="./rules.html">Rules</a></li>
                     <li><a href="./game_info.html">Game Information</a></li>
+                    <li><a href="./registration.html">Registration Form</a></li>
                 </ul>      
             </nav>
             <img class="nav-img" src="./assets/img/design1_image2.jpg" alt="Image 2 Task 2">      
