--- a/rules.html
+++ b/rules.html
@@ -23,6 +23,7 @@
                     <li><a href="./contact.html">Contact</a></li>
                     <li><a id="current" href="./rules.html">Rules</a></li>
                     <li><a href="./game_info.html">Game Information</a></li>
+                    <li><a href="./registration.html">Registration Form</a></li>
                 </ul>
             </nav>
 
