--- a/registration.html
+++ b/registration.html
@@ -39,66 +39,84 @@
                 <div class="articles">
                     <form action="./show_data.html">
                         <fieldset>
-                            <label>Player's First name: <input type="text"></label>
-                            <label>Last Name: <input type="text"></label>
-                            <label>Street Address: <input type="text"></label>
-                            <label>City: <input type="text"></label>
-                            <label>Zip Code: <input type="number"></label>
-                            <label>Birth Date <input type="date"></label>
-                            <div>
-                                <span>Gender: </span>                         
-                                    <label>Female <input type="radio"></label>
-                                    <label>Male <input type="radio"></label>
+                            <label class="col-2">Player's First name: <input name="firstname" type="text"></label>
+                            <label class="col-2">Last Name: <input name="lastname" type="text"></label>
+                            <label class="col-1">Street Address: <input name="streetadress" type="text"></label>
+                            <label class="col-2">City: <input name="city" type="text"></label>
+                            <label class="col-2">Zip Code: <input name="zipcode" type="number"></label>
+                            <label class="col-2">Birth Date: <input name="birthdate" type="date"></label>
+                            <div class="col-2">
+                                <label>Gender: </label>                         
+                                <label>Female <input name="gender" value="F" type="radio"></label>
+                                <label>Male <input name="gender" value="M" type="radio"></label>
                             </div>
-                            <div>
-                                <span>Grade: </span>
-                                <label> <input type="radio"> Pre-School</label>
-                                <label> <input type="radio"> 1st</label>
-                                <label> <input type="radio"> 2nd</label>
-                                <label> <input type="radio"> 3rd</label>
-                                <label> <input type="radio"> 4th</label>
-                                <label> <input type="radio"> 5th</label>                           
-                            </div>
-                        </fieldset>
-                        <fieldset>
-                            <legend>Which elementary school do you live near?</legend>
-                            <div>
-                                <h3>Closest School</h3>
-                                <label> <input type="radio"> AJ Katzenmaier </label>
-                                <label> <input type="radio"> Marjorie P Hart </label>
-                                <label> <input type="radio"> Greenbay </label>
-                                <label> <input type="radio"> North Elementary </label>
-                                <label> <input type="radio"> Howard A Yeager </label>
-                                <label> <input type="radio"> South Elementary </label>
+                            <div class="col-1">
+                                <label>Grade: </label>
+                                <label> <input type="radio" name="grade" value="0"> Pre-School</label>
+                                <label> <input type="radio" name="grade" value="1"> 1st</label>
+                                <label> <input type="radio" name="grade" value="2"> 2nd</label>
+                                <label> <input type="radio" name="grade" value="3"> 3rd</label>
+                                <label> <input type="radio" name="grade" value="4"> 4th</label>
+                                <label> <input type="radio" name="grade" value="5"> 5th</label>                           
                             </div>
                         </fieldset>
                         <fieldset>
-                            <legend>What position(s) do you normally play? (check all that apply)</legend>
-                            <label> <input type="checkbox"> Forward </label>
-                            <label> <input type="checkbox"> Midfield </label>
-                            <label> <input type="checkbox"> Defense </label>
-                            <label> <input type="checkbox"> Goalkeeper </label>
+                            <legend><h3>Which elementary school do you live near?</h3></legend>
+                            <h4 class="col-1">Closest School</h4>
+                            <div id="form-school">
+                                <label> <input type="radio" name="school" value="AJK"> AJ Katzenmaier </label>
+                                <label> <input type="radio" name="school" value="Gb"> Greenbay </label>
+                                <label> <input type="radio" name="school" value="HAY"> Howard A Yeager </label>
+                                <label> <input type="radio" name="school" value="MPH"> Marjorie P Hart </label>
+                                <label> <input type="radio" name="school" value="NE"> North Elementary </label>
+                                <label> <input type="radio" name="school" value="SE"> South Elementary </label>
+                            </div>
                         </fieldset>
                         <fieldset>
-                            <legend>Uniform Size</legend>                        
-                            <label> <input type="radio"> Youth Small </label>
-                            <label> <input type="radio"> Youth Medium </label>
-                            <label> <input type="radio"> Youth Large </label>
-                            <label> <input type="radio"> Small </label>
-                            <label> <input type="radio"> Medium </label>
-                            <label> <input type="radio"> Large </label>
-                            <label> <input type="radio"> Extra-Large </label>                           
+                            <legend><h3>What position(s) do you normally play? (check all that apply)</h3></legend>
+                            <div id="form-position" >
+                                
+                                <label> <input type="checkbox" name="position1" value="F"> Forward </label>
+                                <label> <input type="checkbox" name="position2" value="D"> Defense </label>
+                                <label> <input type="checkbox" name="position3" value="M"> Midfield </label>
+                                <label> <input type="checkbox" name="position4" value="G"> Goalkeeper </label>
+                            </div>
                         </fieldset>
-                        <div>
-                            <h3>Permission to Play</h3>
-                            <p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
-                                Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
-                                member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
-                                neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
-                                parents and previous league members</p>
-                        </div>
-                        <label> Parent/GuardianSignature: <input type="text"> </label>
-                        <label> Date: <input type="date"> </label>
+                        <fieldset >
+                            <legend><h3>Uniform Size</h3></legend>
+                            <div id="form-uniform">
+
+                                <label> <input type="radio" name="uniform1" value="YS" > Youth Small </label>
+                                <label> <input type="radio" name="uniform2" value="YM"> Youth Medium </label>
+                                <label> <input type="radio" name="uniform3" value="YL"> Youth Large </label>
+                                <label> <input type="radio" name="uniform4" value="S"> Small </label>
+                                <label> <input type="radio" name="uniform5" value="M"> Medium </label>
+                                <label> <input type="radio" name="uniform6" value="L"> Large </label>
+                                <label> <input type="radio" name="uniform7" value="XL"> Extra-Large </label>                           
+                            </div>                        
+                        </fieldset>
+                        <fieldset>
+
+                            <legend><h3>Permission to Play</h3></legend>
+                            
+                            <p>
+                                I, the parent or guardian of the minor registrant, agree that the registrant and I will abide by all the 
+                                rules of the Mighty Ducks Hockey League (MDHL). In recognizing the possibility of physical injury 
+                                associated with hockey and in consideration for the "League" accepting the registrant for its 
+                                hockey program activities, I hereby release, discharge, and/or otherwise indemnify MDHL, 
+                                their employees and associated personnel and volunteers, including the facilities used for 
+                                practices and games, against any claim by or on behalf of the registrant as a result of the 
+                                registrant's participation in the programand/orbeind transported to or from MDHL sponsored 
+                                activities, which transportation <br>
+                                By signing below, I herebyagree andauthorizethe above.In addition, by signing below, lalso 
+                                acknowledge that i have read the cancellation policy and agree to its terms.                                
+                            </p>
+                            <div id="signature">
+                                <label> Parent/GuardianSignature: <input type="text" name="signature"> </label>
+                                <label> Date: <input type="date" name="signdate"> </label>
+                                <button id="submit-button">Submit</button>
+                            </div>
+                        </fieldset>
                     </form>
                 </div>
             </div>
